--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -56,6 +56,7 @@ typings/
 
 # dotenv environment variables file
 .env
+.env.example
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -73,3 +74,5 @@ typings/
 .serverless
 
 dist
+*.md
+!README.md
