--- a/backend/package.json
+++ b/backend/package.json
@@ -19,15 +19,21 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "casper-js-sdk": "^5.0.7",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "eventsource": "^4.1.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
+    "mongoose": "^9.0.2",
     "morgan": "^1.10.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^6.2.0",
     "@types/cors": "^2.8.19",
+    "@types/eventsource": "^3.0.0",
     "@types/express": "^5.0.5",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.9.2",
