--- a/site/package.json
+++ b/site/package.json
@@ -17,7 +17,8 @@
     "@react-three/fiber": "^9.4.2",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
-    "casper-js-sdk": "^5.0.7",
+    "big.js": "^7.0.1",
+    "casper-js-sdk": "^2.15.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/big.js": "^6.2.2",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
